@@ -12,7 +12,13 @@
     "useradd",
     "default",
     "libuser",
-    "profile"
+    "profile",
+    "shadow",
+    "passwd",
+    "group",
+    "shells",
+    "securetty",
+    "tty"
   ],
   "dependencies": [
     {
@@ -43,11 +49,7 @@
   "requirements": [
     {
       "name": "puppet",
-      "version_requirement": "4.x"
-    },
-    {
-      "name": "pe",
-      "version_requirement": ">= 2016.2.0"
+      "version_requirement": "4.6"
     }
   ],
   "data_provider": "hiera"
